--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "axios": "^0.26.0",
+        "body-parser": "^1.19.2",
         "dotenv": "^16.0.0",
         "express": "^4.17.2",
         "nodemon": "^2.0.15",
